Addin the device id input fields on the login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,7 @@
     <form id="loginForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
+      <input type="text" id="deviceId" placeholder="Device ID" required />
       <button type="submit" id="loginButton">Login</button>
       <div class="loading" id="loadingText">Logging in...</div>
     </form>
