--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
-  <link rel="icon" href="/static/images/favicon.ico" />
+  <link rel="icon" href="/static/images/image.jpg" />
   <link rel="stylesheet" href="/static/css/login.css" />
 </head>
 
