--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,9 @@
       <button type="submit" id="loginButton">Login</button>
       <div class="loading" id="loadingText">Logging in...</div>
     </form>
+    <div class="register-link">
+      <p>Don't have an account? <a href="/register">Register here</a></p>
+    </div>
   </div>
 
   <script src="/static/js/login.js"></script>
