--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login</title>
+  <title>Login - Home Security App</title>
   <link rel="icon" href="/static/images/image.jpg" />
   <link rel="stylesheet" href="/static/css/login.css" />
 </head>
