--- a/templates/login.html
+++ b/templates/login.html
@@ -17,15 +17,15 @@
       </div>
       <div class="input-group">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email address" required />
+        <input type="email" id="email" name="email" placeholder="Enter your email address e.g. testa@gmail.com" required />
       </div>
       <div class="input-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required />
+        <input type="password" id="password" name="password" placeholder="Enter your password e.g. 12345678" required />
       </div>
       <div class="input-group">
         <label for="deviceId">Device ID</label>
-        <input type="text" id="deviceId" name="deviceId" placeholder="Enter your device ID" required />
+        <input type="text" id="deviceId" name="deviceId" placeholder="Enter your device ID e.g. 23456786" required />
       </div>
       <button type="submit" id="loginButton" class="login-btn">Login</button>
       <div class="loading" id="loadingText">Logging in...</div>
