Add debounce validation and modern popup for register and login pages

--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" value="12345678" required readonly placeholder="e.g. 12345678">
+                <input type="password" id="password" name="password" required readonly placeholder="e.g. 12345678">
                 <span class="error" id="passwordError"></span>
             </div>
             <div class="input-group">
