--- a/templates/login.html
+++ b/templates/login.html
@@ -35,6 +35,6 @@
       <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
   </div>
-  <script src="/static/js/login.js"></script>
+  <script type="module" src="/static/js/login.js"></script>
 </body>
 </html> 
