--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required readonly placeholder="e.g. 12345678">
+                <input type="password" id="password" name="password" required placeholder="e.g. 12345678">
                 <span class="error" id="passwordError"></span>
             </div>
             <div class="input-group">
@@ -35,6 +35,11 @@
                 <span class="error" id="deviceIdError"></span>
             </div>
             <div class="input-group">
+                <label for="name">Device Name</label>
+                <input type="text" id="name" name="name" placeholder="e.g. Living Room Sensor" required>
+                <span class="error" id="nameError"></span>
+            </div>
+            <div class="input-group">
                 <label for="phone">Phone (optional)</label>
                 <input type="text" id="phone" name="phone" placeholder="Phone number (optional) e.g. 0756000000">
                 <span class="error" id="phoneError"></span>
@@ -44,6 +49,6 @@
             <span class="success" id="formSuccess"></span>
         </form>
     </div>
-    <script src="/static/js/register.js"></script>
+    <script type ="module"src="/static/js/register.js"></script>
 </body>
 </html> 
