--- a/templates/register.html
+++ b/templates/register.html
@@ -49,6 +49,9 @@
             <span class="success" id="formSuccess"></span>
         </form>
     </div>
+    <script>
+      window.BACKEND_URL = "{{ backend_url }}";
+    </script>
     <script type ="module"src="/static/js/register.js"></script>
 </body>
 </html> 
